--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ tqdm = ">=4.61.0"
 wrapt = ">=1.12.1"
 librosa = ">=0.9.0"
 soundfile = ">=0.10.0"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
